--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,36 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+
+
+## python tmp files
+np
+pd
+sys
+argparse
+glob
+stan
+__pycache__
+*.swp
+*.pyc
+*.npz
+
+## "figure/" "results/"  folder
+results/
+figures/
+figure/
+test/
+
+
+
+# tex
+*.bbl
+*.blg
+*.log
+*.out
+*.aux
+*.pdf
+*.synctex.gz
+*.swp
+*.swo
